src/test/resources/Parser/SyntaxErrors/ContinueOutsideLoop.front
class Test {
    void test() {
        continue;
    }
}